--- a/layihe3.html
+++ b/layihe3.html
@@ -38,32 +38,37 @@
         <h1 style="font-weight: 700; font-size: 36px;">Конвертер валют онлайн</h1>
 
         <div class="main">
-            <div>
+
+            <div style="width: 250px;">
                 <p style=" font-weight: 400; font-size: 12px; color: #9F9F9F;">У меня есть </p>
-                <ul style="display:flex; list-style:none; justify-content: space-between;">
+                <ul id="valyutalist1">
                     <li>RUB</li>
                     <li>USD</li>
                     <li>EUR</li>
                     <li>GBP</li>
                 </ul>
-                <div>
-                    <input type="text">
+                <div style=" width: 250px; height: 105px; border: 1px solid #E5E5E5; border-radius: 3px; margin-top: 20px;">
+                    <input type="number" style="border: none; height: 50px; width: 100%; font-weight: 700; font-size: 30px;">
+                    <p style="font-weight: 400;font-size: 12px; color: #C6C6C6; margin-top: 35px; margin-left: 10px;">Valyuta seçin</p>
                 </div>
 
             </div>
-            <div>
+
+
+            <div style="width: 250px;">
                 <p style=" font-weight: 400; font-size: 12px; color: #9F9F9F;">Хочу приобрести</p>
-                <ul style="display:flex; list-style:none; justify-content: space-between;">
+                <ul id="valyutalist2">
                     <li>RUB</li>
                     <li>USD</li>
                     <li>EUR</li>
                     <li>GBP</li>
                 </ul>
-                <div>
-                    <input type="text">
+                <div style=" width: 250px; height: 105px; border: 1px solid #E5E5E5; border-radius: 3px; margin-top: 20px;">
+                    <input type="number" style="border: none; height: 50px; width: 100%; font-weight: 700; font-size: 30px;" >
+                    <p style="font-weight: 400;font-size: 12px; color: #C6C6C6; margin-top: 35px; margin-left: 10px;">Valyuta seçin</p>
                 </div>
-
             </div>
+
         </div>
     </div>
 
