--- a/layihe3.html
+++ b/layihe3.html
@@ -42,10 +42,10 @@
             <div style="width: 250px;">
                 <p style=" font-weight: 400; font-size: 12px; color: #9F9F9F;">У меня есть </p>
                 <ul id="valyutalist1">
-                    <li id="rub1">RUB</li>
-                    <li id="usd1">USD</li>
-                    <li id="eur1">EUR</li>
-                    <li id="gbp1">GBP</li>
+                    <li id="rub1" class="currency-item">RUB</li>
+                    <li id="usd1" class="currency-item">USD</li>
+                    <li id="eur1" class="currency-item">EUR</li>
+                    <li id="gbp1" class="currency-item">GBP</li>
                 </ul>
                 <div style=" width: 250px; height: 105px; border: 1px solid #E5E5E5; border-radius: 3px; margin-top: 20px;">
                     <input id="input1" type="number" style="border: none; height: 50px; width: 100%; font-weight: 700; font-size: 30px;">
@@ -58,10 +58,10 @@
             <div style="width: 250px;">
                 <p style=" font-weight: 400; font-size: 12px; color: #9F9F9F;">Хочу приобрести</p>
                 <ul id="valyutalist2">
-                    <li id="rub2">RUB</li>
-                    <li id="usd2">USD</li>
-                    <li id="eur2">EUR</li>
-                    <li id="gbp2">GBP</li>
+                    <li id="rub2" class="currency-item">RUB</li>
+                    <li id="usd2" class="currency-item">USD</li>
+                    <li id="eur2" class="currency-item">EUR</li>
+                    <li id="gbp2" class="currency-item">GBP</li>
                 </ul>
                 <div style=" width: 250px; height: 105px; border: 1px solid #E5E5E5; border-radius: 3px; margin-top: 20px;">
                     <input id="input2" type="number" style="border: none; height: 50px; width: 100%; font-weight: 700; font-size: 30px;" >
