--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <img src="Asset 1@3x 1.png" alt="">
         </div>
 
-        <div>
+        <div class="options">
+            <button class="btn">ОПЦИИ</button>
             <ul id="list" style="color: #959BA4;">
                 <li style="color: black;">БАНК</li>
                 <li>БИЗНЕС</li>
@@ -39,33 +40,37 @@
 
         <div class="main">
 
-            <div style="width: 250px;">
+            <div class="left" style="width: 250px;">
                 <p style=" font-weight: 400; font-size: 12px; color: #9F9F9F;">У меня есть </p>
                 <ul id="valyutalist1">
-                    <li id="rub1" class="currency-item">RUB</li>
+                    <li id="rub1" class="currency-item active">RUB</li>
                     <li id="usd1" class="currency-item">USD</li>
                     <li id="eur1" class="currency-item">EUR</li>
                     <li id="gbp1" class="currency-item">GBP</li>
                 </ul>
-                <div style=" width: 250px; height: 105px; border: 1px solid #E5E5E5; border-radius: 3px; margin-top: 20px;">
-                    <input id="input1" type="number" style="border: none; height: 50px; width: 100%; font-weight: 700; font-size: 30px;">
-                    <p id="p1" style="font-weight: 400;font-size: 12px; color: #C6C6C6; margin-top: 35px; margin-left: 10px;">Valyuta seçin</p>
+                <div
+                    style="height: 105px; border: 1px solid #E5E5E5; border-radius: 3px; margin-top: 20px; padding: 0 10px 0 10px;">
+                    <input id="input1" type="number">
+                    <p id="p1" style="font-weight: 400;font-size: 12px; color: #C6C6C6; margin-top: 35px;">Valyuta seçin
+                    </p>
                 </div>
 
             </div>
 
 
-            <div style="width: 250px;">
+            <div class="right" style="width: 250px;">
                 <p style=" font-weight: 400; font-size: 12px; color: #9F9F9F;">Хочу приобрести</p>
                 <ul id="valyutalist2">
                     <li id="rub2" class="currency-item">RUB</li>
-                    <li id="usd2" class="currency-item">USD</li>
+                    <li id="usd2" class="currency-item active">USD</li>
                     <li id="eur2" class="currency-item">EUR</li>
                     <li id="gbp2" class="currency-item">GBP</li>
                 </ul>
-                <div style=" width: 250px; height: 105px; border: 1px solid #E5E5E5; border-radius: 3px; margin-top: 20px;">
-                    <input id="input2" type="number" style="border: none; height: 50px; width: 100%; font-weight: 700; font-size: 30px;" >
-                    <p id="p2" style="font-weight: 400;font-size: 12px; color: #C6C6C6; margin-top: 35px; margin-left: 10px;">Valyuta seçin</p>
+                <div
+                    style="height: 105px; border: 1px solid #E5E5E5; border-radius: 3px; margin-top: 20px; padding: 0 10px 0 10px;">
+                    <input id="input2" type="number">
+                    <p id="p2" style="font-weight: 400;font-size: 12px; color: #C6C6C6; margin-top: 35px;">Valyuta seçin
+                    </p>
                 </div>
             </div>
 
