--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div style="padding:  10px;">
-            <button id="cixis">ВОЙТИ</button>
+            <button  type="button" onclick="javascript:window.close()" id="cixis">ВОЙТИ</button>
         </div>
     </div>
 
